--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -9,9 +9,7 @@
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
                     <tr>
-                        <!-- <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>User ID</th> -->
                         <th>
-                            <!-- <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Username -->
                             <a ng-click="orderByField='username'; reverseSort = !reverseSort">Username
                                 <span ng-show="orderByField == 'username'">
                                     <span ng-show="!reverseSort" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
@@ -21,7 +19,6 @@
                         </th>
                         <th>Password</th>
                         <th>
-                            <!-- <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>First Name -->
                             <a ng-click="orderByField='firstName'; reverseSort = !reverseSort">First Name
                                 <span ng-show="orderByField == 'firstName'">
                                     <span ng-show="!reverseSort" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
@@ -30,7 +27,6 @@
                             </a>
                         </th>
                         <th>
-                            <!-- <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Last Name -->
                             <a ng-click="orderByField='lastName'; reverseSort = !reverseSort">Last Name
                                 <span ng-show="orderByField == 'lastName'">
                                     <span ng-show="!reverseSort" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
@@ -39,7 +35,7 @@
                             </a>
                         </th>
                         <th>Email(s)</th>
-                        <th>Roles</th>
+                        <th>Role(s)</th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -47,22 +43,22 @@
                     <tr>
                         <!-- <td>&nbsp;</td> -->
                         <td>
-                            <input ng-model="user.username" class="form-control" id="input-username" placeholder="username" />
+                            <input ng-model="user.username" class="form-control" id="input-username" placeholder="Username" />
                         </td>
                         <td>
-                            <input ng-model="user.password" class="form-control" id="input-password" type="password" placeholder="password" />
+                            <input ng-model="user.password" class="form-control" id="input-password" type="password" placeholder="Password" />
                         </td>
                         <td>
-                            <input ng-model="user.firstName" class="form-control" id="input-first" placeholder="first" />
+                            <input ng-model="user.firstName" class="form-control" id="input-first" placeholder="First Name" />
                         </td>
                         <td>
-                            <input ng-model="user.lastName" class="form-control" id="input-last" placeholder="last" />
+                            <input ng-model="user.lastName" class="form-control" id="input-last" placeholder="Last Name" />
                         </td>
                         <td>
-                            <input ng-model="user.emails" class="form-control" id="input-emails" type="email" placeholder="email" />
+                            <input ng-model="user.emails" class="form-control" id="input-emails" type="email" placeholder="Email" />
                         </td>
                         <td>
-                            <input ng-model="user.roles" class="form-control" id="input-roles" placeholder="roles" />
+                            <input ng-model="user.roles" class="form-control" id="input-roles" placeholder="Role" />
                         </td>
                         <td>
                             <a ng-click="add(user)"><span class="glyphicon glyphicon-plus"></span></a>
