--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -41,17 +41,12 @@
                         <input ng-model="currentUser.emails" type="email" class="form-control" id="" placeholder="Email">
                     </div>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Role:</label>
                     <div class="col-sm-10 col-md-10">
                         <input ng-model="currentUser.roles" type="text" class="form-control" id="" placeholder="Role">
-                        <!-- <select class="form-control fields-form">
-                            <option>Student</option>
-                            <option>Faculty</option>
-                            <option>Admin</option>
-                        </select> -->
                     </div>
-                </div>
+                </div> -->
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10 col-md-10">
