--- a/public/homepage.css
+++ b/public/homepage.css
@@ -174,7 +174,13 @@ img.headshot {
 }
 .social-icons li {
     display: inline-block;
-    margin: 1em 0.75rem;
+    margin: 1em 0;
+    width: 70px;
+}
+@media screen and (max-width: 400px) {
+    .social-icons li {
+        width: 60px;
+    }
 }
 .social-icons a {
     display: block;
