--- a/public/project/client/views/header/header.view.html
+++ b/public/project/client/views/header/header.view.html
@@ -9,8 +9,8 @@
 
 
             <ul class="nav navbar-nav navbar-right">
-                <li ng-class="{'active': $location.url().indexOf('help') != -1}">
-                    <a href="#/help" style="padding: 17px 13px;">
+                <li>
+                    <a href="" style="padding: 17px 13px;" data-toggle="modal" data-target="#helpModal">
                         <i class="fa fa-question-circle"></i>
                     </a>
                 </li>
