--- a/public/project/client/views/admin/admin.view.html
+++ b/public/project/client/views/admin/admin.view.html
@@ -2,68 +2,85 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Admin</h1>
+
             <h3>Users</h3>
+            <br>
+            <!-- <span>Ordered By: {{orderByField}}, Reverse Sort: {{reverseSort}}</span> -->
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
                     <tr>
-                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Username</th>
-                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Password</th>
-                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Role</th>
-                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Action</th>
+                        <th>
+                            <a ng-click="orderByField='username'; reverseSort = !reverseSort">Username
+                                <span ng-show="orderByField == 'username'">
+                                    <span ng-show="!reverseSort" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+                                    <span ng-show="reverseSort" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+                                </span>
+                            </a>
+                        </th>
+                        <th>Password</th>
+                        <th>
+                            <a ng-click="orderByField='firstName'; reverseSort = !reverseSort">First Name
+                                <span ng-show="orderByField == 'firstName'">
+                                    <span ng-show="!reverseSort" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+                                    <span ng-show="reverseSort" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+                                </span>
+                            </a>
+                        </th>
+                        <th>
+                            <a ng-click="orderByField='lastName'; reverseSort = !reverseSort">Last Name
+                                <span ng-show="orderByField == 'lastName'">
+                                    <span ng-show="!reverseSort" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+                                    <span ng-show="reverseSort" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+                                </span>
+                            </a>
+                        </th>
+                        <th>Email(s)</th>
+                        <th>Role(s)</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
+                        <!-- <td>&nbsp;</td> -->
                         <td>
-                            <input type="text" class="form-control" placeholder="Username">
+                            <input ng-model="user.username" class="form-control" id="input-username" placeholder="Username" />
                         </td>
                         <td>
-                            <input type="text" class="form-control" placeholder="Password">
+                            <input ng-model="user.password" class="form-control" id="input-password" type="password" placeholder="Password" />
                         </td>
                         <td>
-                            <div class="form-group">
-                                <select class="form-control">
-                                    <option>User</option>
-                                    <option>Admin</option>
-                                    <option>Student</option>
-                                    <option>Faculty</option>
-                                </select>
-                            </div>
+                            <input ng-model="user.firstName" class="form-control" id="input-first" placeholder="First Name" />
                         </td>
                         <td>
-                            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
+                            <input ng-model="user.lastName" class="form-control" id="input-last" placeholder="Last Name" />
                         </td>
-                    </tr>
-                    <tr>
-                        <td>Alice</td>
-                        <td></td>
-                        <td>Student</td>
                         <td>
-                            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <input ng-model="user.emails" class="form-control" id="input-emails" type="email" placeholder="Email" />
+                        </td>
+                        <td>
+                            <input ng-model="user.roles" class="form-control" id="input-roles" placeholder="Role" />
+                        </td>
+                        <td>
+                            <a ng-click="add(user)"><span class="glyphicon glyphicon-plus"></span></a>
+                            <a ng-click="update(user)"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
                         </td>
                     </tr>
-                    <tr>
-                        <td>Bob</td>
-                        <td></td>
-                        <td>Faculty | Admin</td>
+                    <tr ng-repeat="user in users|orderBy:orderByField:reverseSort">
+                        <!-- <td>{{user._id}}</td> -->
+                        <td>{{user.username}}</td>
+                        <td>{{user.password}}</td>
+                        <td>{{user.firstName}}</td>
+                        <td>{{user.lastName}}</td>
+                        <td>{{user.email}}</td>
+                        <td>{{user.roles}}</td>
                         <td>
-                            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Charlie</td>
-                        <td></td>
-                        <td></td>
-                        <td>
-                            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <a ng-click="remove(user)"><span class="glyphicon glyphicon-remove"></span></a>
+                            <a ng-click="select(user)"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
+    <div ng-include="'views/header/help-modal.html'"></div>
 </div>
