--- a/public/project/client/views/register/register.view.html
+++ b/public/project/client/views/register/register.view.html
@@ -1,6 +1,6 @@
 <div ng-controller="RegisterController" class="container-fluid">
     <div class="row">
-        <div class="col-sm-9 col-sm-offset-3 col-md-5 col-md-offset-4 main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-6 col-md-offset-3 main">
             <h1>Register</h1>
 
             <div ng-show="message" class="alert alert-danger" role="alert">{{message}}</div>
@@ -27,7 +27,7 @@
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">NU ID:</label>
                     <div class="col-sm-10">
-                        <input ng-model="model.user.nuid" type="email" class="form-control" id="" placeholder="000000000">
+                        <input ng-model="model.user.nuid" type="text" class="form-control" id="" placeholder="000000000">
                     </div>
                 </div>
                 <div class="form-group">
@@ -50,7 +50,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button ng-click="model.register(model.user);" type="submit" class="btn btn-default btn-md">Register</button>
+                        <button type="submit" class="btn btn-default btn-md" ng-click="model.register(model.user)">Register</button>
                     </div>
                 </div>
             </form>
