isAdmin not working, but everything else is ok

--- a/public/project/client/css/project-style.css
+++ b/public/project/client/css/project-style.css
@@ -16,6 +16,7 @@ a {
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 a:hover {
     color: #CC0000;
