crud operations kind of working

--- a/public/project/client/views/admin/admin.view.html
+++ b/public/project/client/views/admin/admin.view.html
@@ -59,7 +59,7 @@
                             <input ng-model="user.email" class="form-control" id="input-email" type="email" placeholder="Email" />
                         </td>
                         <td>
-                            <input ng-model="user.nuid" class="form-control" id="input-nuid" type="email" placeholder="000000000" />
+                            <input ng-model="user.nuid" class="form-control" id="input-nuid" type="number" placeholder="000000000" />
                         </td>
                         <td>
                             <input ng-model="user.roles" class="form-control" id="input-roles" placeholder="Role" />
