--- a/public/project/client/views/courses/course.view.html
+++ b/public/project/client/views/courses/course.view.html
@@ -2,15 +2,16 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main courses">
             <h1>Courses</h1>
+            <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
 
-            <div ng-show="currentUser" class="pull-right search">
+            <!-- <div ng-show="currentUser" class="pull-right search">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search...">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
                     </span>
                 </div>
-            </div>
+            </div> -->
 
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
