add new course modal

--- a/public/project/client/css/project-style.css
+++ b/public/project/client/css/project-style.css
@@ -447,6 +447,11 @@ a.forgot-password {
     vertical-align: middle;
 }
 
+.courses .addCourseButton {
+    margin-left: 50px;
+    margin-bottom: 12px;
+}
+
 /****************** DASHBOARD ****************/
 
 .main h1 {
