--- a/public/project/client/views/courses/course.view.html
+++ b/public/project/client/views/courses/course.view.html
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main courses">
             <h1>Courses</h1>
+            <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default addCourseButton" data-toggle="modal" data-target="#createCourse"><i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;Add New Course</button>
+            <!-- <button ng-click="update(course)" ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default"><i class="fa fa-pencil"></i>&nbsp;&nbsp;&nbsp;Update Course</button> -->
+
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
 
             <!-- <div ng-show="currentUser" class="pull-right search">
@@ -23,7 +26,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <!-- <tr>
                         <td ng-show="currentUser.roles.indexOf('admin') >= 0">
                             <input ng-model="course.subject" type="text" class="course-control" placeholder="Subject">
                         </td>
@@ -34,41 +37,106 @@
                             <input ng-model="course.title" type="text" class="course-control" placeholder="Name">
                         </td>
                         <td ng-show="currentUser.roles.indexOf('admin') >= 0">
-                            <a ng-click="addCourse(course)">
+                            <a ng-click="add(course)">
                                 <i class="fa fa-plus-circle"></i>
                             </a>
-                            <a ng-click="updateCourse()">
+                            <a ng-click="update(course)">
                                 <i class="fa fa-check-circle"></i>
                             </a>
                         </td>
-                    </tr>
-                    <tr ng-repeat="course in courses">
+                    </tr> -->
+                    <!-- <tr ng-repeat="course in courses"> -->
+                    <tr>
                         <td>
-                            <a href="#">{{course.subject}}</a>
+                            <!-- <a href="#">{{course.subject}}</a> -->
+                            <a href="#">CS</a>
                         </td>
                         <td>
-                            <a href="#">{{course.number}}</a>
+                            <!-- <a href="#">{{course.number}}</a> -->
+                            <a href="#">2800</a>
                         </td>
                         <td>
-                            <a href="#">{{course.title}}</a>
+                            <!-- <a href="#">{{course.title}}</a> -->
+                            <a href="#">Logic &amp; Comp</a>
                         </td>
                         <td class="table-nowrap">
-                            <a ng-click="addCourseToSchedule(course)">
+                            <a ng-click="completed(course)">
                                 <i class="fa fa-calendar-plus-o"></i>
                             </a>
-                            <a ng-click="model.saveCourse(course)">
+                            <a ng-click="saveCourse(course)">
                                 <i class="fa fa-star-o"></i>
                             </a>
-                            <a ng-click="selectCourse($index)" ng-show="currentUser.roles.indexOf('admin') >= 0">
+                            <!-- <a ng-click="select(course)" ng-show="currentUser.roles.indexOf('admin') >= 0">
                                 <i class="fa fa-pencil-square-o"></i>
                             </a>
-                            <a ng-click="deleteCourse($index)" ng-show="currentUser.roles.indexOf('admin') >= 0">
+                            <a ng-click="remove(course)" ng-show="currentUser.roles.indexOf('admin') >= 0">
                                 <i class="fa fa-trash-o"></i>
-                            </a>
+                            </a> -->
                         </td>
                     </tr>
                 </tbody>
             </table>
+
+
+
+            <div class="modal fade" id="createCourse" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Add A New Course</h4>
+                        </div>
+                        <div class="modal-body">
+                            <!-- subject: String,
+                            number: Number,
+                            title: String,
+                            description: String,
+                            creditHours: Number,
+                            lectureHours: Number,
+                            prereqs: [String],
+                            level: String,
+                            type: String, -->
+                            <form>
+                                <label>Subject</label>
+                                <input ng-model="model.newCourse.subject" class="form-control" type="text" placeholder="CS">
+                                <br>
+                                <label>Number</label>
+                                <input ng-model="model.newCourse.number" class="form-control" type="text" placeholder="1100">
+                                <br>
+                                <label>Title</label>
+                                <input ng-model="model.newCourse.title" class="form-control" type="text" placeholder="Computer Science and Its Applications">
+                                <br>
+                                <label>Description</label>
+                                <textarea ng-model="model.newCourse.description" class="form-control" placeholder=""></textarea>
+                                <br>
+                                <label>Credit Hours</label>
+                                <input ng-model="model.newCourse.creditHours" class="form-control" type="text" placeholder="4">
+                                <br>
+                                <label>Lecture Hours</label>
+                                <input ng-model="model.newCourse.lectureHours" class="form-control" type="text" placeholder="4">
+                                <br>
+                                <label>Prerequisites</label>
+                                <input ng-model="model.newCourse.prereqs" class="form-control" type="text" placeholder="">
+                                <br>
+                                <label>Level</label>
+                                <input ng-model="model.newCourse.level" class="form-control" type="text" placeholder="Undergraduate">
+                                <br>
+                                <label>Type</label>
+                                <input ng-model="model.newCourse.type" class="form-control" type="text" placeholder="Lecture">
+                                <br>
+
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button ng-click="model.addCourse(course)" type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-success">Add</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </div>
     <div ng-include="'views/header/help-modal.html'"></div>
