--- a/public/project/client/views/dashboard/dashboard.view.html
+++ b/public/project/client/views/dashboard/dashboard.view.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-lg-8 col-md-8">
             <div class="panel panel-default schedule-panel">
-                <div class="panel-heading"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;Schedule <span class="text-muted">| Spring 2016 Semester</span></div>
+                <div class="panel-heading"><i class="fa fa-graduation-cap"></i>&nbsp;&nbsp;&nbsp;Completed Courses</span></div>
                 <div class="panel-body">
                     <div class="list-group">
                         <a href="#" class="list-group-item">Course</a>
@@ -26,7 +26,7 @@
         </div>
         <div class="col-lg-4 col-md-4">
             <div class="panel panel-default schedule-panel">
-                <div class="panel-heading"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;Something</div>
+                <div class="panel-heading"><i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;In Progress</div>
                 <div class="panel-body">
                     <div class="list-group">
                         <a href="#" class="list-group-item">Course</a>
